syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "AspNetCoreGrpcService";

package wf;

service WeatherForecast {
    rpc GetWeatherForecasts(WeatherForecastRequest) returns (WeatherForecastReply);
}

message WeatherForecastRequest {
    int32 count = 1;
}

message WeatherForecastReply {
    repeated WeatherForecastItem weatherForecasts = 1;
}

message WeatherForecastItem {
	google.protobuf.Timestamp date = 1;
	int32 temperatureC = 2;
	Summaries summary = 3;
	string summaryString = 4;
	bool isCold = 5;
}

enum Summaries {
	Freezing = 0;
    Bracing = 1;
    Chilly = 2;
    Cool = 3;
    Mild = 4;
    Warm = 5;
    Balmy = 6;
    Hot = 7;
    Sweltering = 8;
    Scorching = 9;
}